force-app/main/default/objects/PDRI__Audit_Report__c/PDRI__Audit_Report__c.object-meta.xml
<CustomObject>
    <label>Audit Report</label>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Audit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>