force-app/main/default/objects/PDRI__Audit_Report__c/fields/PDRI__Filename__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>