force-app/main/default/objects/PDRI__Audit_Report__c/fields/PDRI__Managed_Environment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Managed_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Environment</label>
    <referenceTo>PDRI__Managed_Environment__c</referenceTo>
    <relationshipLabel>Audit Reports</relationshipLabel>
    <relationshipName>Audit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>