force-app/main/default/objects/PDRI__Audit_Report__c/fields/PDRI__Report_Link__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Report_Link__c</fullName>
    <label>Report Link</label>
    <type>Url</type>
</CustomField>